--- a/EstudosDataVisualization.ipynb
+++ b/EstudosDataVisualization.ipynb
@@ -180,9 +180,7 @@
     "graf_final = df_final.plot(x= 'data', y= 'Reais.Açúcar')\n",
     "graf_final.legend()\n",
     "graf_final.set_ylabel('Reais*Açúcar')\n",
-    "graf_final.set_title('Variação do preço do Açúcar em Reais')\n",
-    "\n",
-    "."
+    "graf_final.set_title('Variação do preço do Açúcar em Reais')"
    ]
   },
   {
